bugfix: update IBU colors for better visibility

--- a/src/app/components/inventory/inventory.component.scss
+++ b/src/app/components/inventory/inventory.component.scss
@@ -56,17 +56,17 @@
 
 .ibu-mid {
   /* Color */
-  color: #9bc484;
+  color: #adffc0;
 }
 
 .ibu-high {
   /* Color */
-  color: #309400;
+  color: #4fff78;
 }
 
 .ibu-ultra {
   /* Color */
-  color: #161312;
+  color: #00ff3c;
 }
 
 .inventory-card {
